// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationView test  should render component with correct props 1`] = `
<div>
  <span
    class="citationClassName"
  >
     
    Some text
    :
  </span>
</div>
`;

exports[`CitationView test  should render component with correct suffix 1`] = `
<div>
  <span
    class="citationClassName"
  >
     
    Some text.
  </span>
</div>
`;

exports[`CitationView test  should render component with empty span 1`] = `
<div>
  <span
    class=" empty"
  />
</div>
`;

exports[`CitationView test  should render component with no className 1`] = `
<div>
  <span
    class=""
  >
     
    Some text.
  </span>
</div>
`;

exports[`CitationView test  should render component with no prefix or suffix 1`] = `
<div>
  <span
    class="citationClassName empty"
  />
</div>
`;
